# towerbot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  startup.sh
.claude/agents/: ai-engineer.md  test-writer-fixer.md
.github/workflows/: ca-berlinbot-prod-AutoDeployTrigger-30402c0b-d223-4001-bf8c-50c5a87620f4.yml  ca-towerbot-prod-AutoDeployTrigger-2d38a234-0ba2-48f3-bf10-588ea3fd4c7f.yml  ca-towerbot-prod-AutoDeployTrigger-5b751876-e25c-4daf-9408-e1ccca2a4952.yml  ca-towerbot-prod-AutoDeployTrigger-6a763d5a-0076-4ff0-9719-b1d8ad38dd95.yml  ca-towerbot-prod-AutoDeployTrigger-706a238a-f48b-4034-bb61-52e442475398.yml
app/: main.py  webhook.py
app/api/: connections.py  graph.py
app/core/: config.py  constants.py  lifespan.py  prompts.py  tools.py
app/mcp/: graph.py  tower.py
app/models/: ontology.py  responses.py  tools.py
app/schemas/: generated_enums.py  ontology.py  responses.py  tools.py
app/services/: ai.py  auth.py  database.py  graph.py
scripts/: generate_enums.py  oauth_test_script.py
static/data/: tower.json
supabase/: config.toml
tests/: conftest.py  test_ai_service.py  test_auth_service.py  test_config.py  test_graph_service.py  test_main.py  test_schemas.py  test_tools.py
